@@ -666,11 +666,13 @@ describe 'Formtastic::FormBuilder#input' do
         end
 
 				it 'should have a custom hint class if I ask for one' do
-          hint_text = "this is the title of the post"
-          concat(semantic_form_for(@new_post) do |builder|
-            concat(builder.input(:title, :hint => hint_text, :hint_class => 'custom-hint-class'))
-          end)
-          output_buffer.should have_tag("form li p.custom-hint-class", hint_text)
+          with_deprecation_silenced do
+            hint_text = "this is the title of the post"
+            concat(semantic_form_for(@new_post) do |builder|
+              concat(builder.input(:title, :hint => hint_text, :hint_class => 'custom-hint-class'))
+            end)
+            output_buffer.should have_tag("form li p.custom-hint-class", hint_text)
+          end
         end
 
         it 'should have a custom hint class defaulted for all forms' do
@@ -728,9 +730,11 @@ describe 'Formtastic::FormBuilder#input' do
                        }
                      }
                   }
-                concat(semantic_form_for(@new_post) do |builder|
-                  concat(builder.input(:title, :hint => true, :hint_class => 'custom-hint-class'))
-                end)
+                with_deprecation_silenced do
+                  concat(semantic_form_for(@new_post) do |builder|
+                    concat(builder.input(:title, :hint => true, :hint_class => 'custom-hint-class'))
+                  end)
+                end
                 output_buffer.should have_tag('form li p.custom-hint-class', @localized_hint_text)
               end
             end
