@@ -2,6 +2,8 @@ HEAD
 
 * removed deprecated buttons DSL, ButtonHelper and commit_button helper
 * deprecated the top-level :value option that is only used by HiddenInput
+* deprecated :hint_class option (use global configuration)
+* deprecated :error_class option (use global configuration)
 
 2.1.0
 
